--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "custom-deploy": "git add . && git commit -m \"Messaging feature\" && git push && npm run build && npm run deploy"
   },
   "eslintConfig": {
     "extends": [
